<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.pdfsam</groupId>
	<artifactId>pdfsam-parent</artifactId>
	<packaging>pom</packaging>
	<version>4.1.4-SNAPSHOT</version>
	<name>PDFsam</name>
	<description>A free open source desktop application to split and merge pdf documents</description>
	<url>https://pdfsam.org</url>

	<organization>
		<name>Sober Lemur S.a.s. di Vacondio Andrea</name>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:torakiki/pdfsam.git</connection>
		<developerConnection>scm:git:git@github.com:torakiki/pdfsam.git</developerConnection>
		<url>scm:git:git@github.com:torakiki/pdfsam.git</url>
		<tag>HEAD</tag>
	</scm>

	<profiles>
		<profile>
			<activation>
				<property>
					<name>env.TRAVIS</name>
					<value>true</value>
				</property>
			</activation>
			<id>no-headless-failing-tests</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<excludedGroups>org.pdfsam.NoHeadless</excludedGroups>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<activation>
				<os>
					<family>Windows</family>
				</os>
			</activation>
			<id>no-windows-failing-tests</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<excludedGroups>org.pdfsam.NoWindows</excludedGroups>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>toolchain</id>
			<activation>
				<jdk>(,11)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-toolchains-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<goals>
									<goal>toolchain</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<toolchains>
								<jdk>
									<version>11</version>
								</jdk>
							</toolchains>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>basic-release</id>
			<activation>
				<property>
					<name>release</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<version>2.5.3</version>
						<configuration>
							<tagNameFormat>v@{project.version}</tagNameFormat>
							<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<preparationGoals>clean install</preparationGoals>
							<localCheckout>true</localCheckout>
							<goals>package</goals>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<modules>
		<module>pdfsam-basic</module>
		<module>pdfsam-gui</module>
		<module>pdfsam-i18n</module>
		<module>pdfsam-core</module>
		<module>pdfsam-service</module>
		<module>pdfsam-fx</module>
		<module>pdfsam-merge</module>
		<module>pdfsam-simple-split</module>
		<module>pdfsam-split-by-size</module>
		<module>pdfsam-split-by-bookmarks</module>
		<module>pdfsam-alternate-mix</module>
		<module>pdfsam-rotate</module>
		<module>pdfsam-extract</module>
		<module>pdfsam-docs</module>
	</modules>

	<developers>
		<developer>
			<id>torakiki</id>
			<name>Andrea Vacondio</name>
			<email>andrea.vacondio@gmail.com</email>
		</developer>
	</developers>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>1.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.8</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<properties>
		<junit.version>4.12</junit.version>
		<slf4j.version>1.7.29</slf4j.version>
		<commons.lang.version>3.9</commons.lang.version>
		<commons.io.version>2.6</commons.io.version>
		<mockito.version>3.0.0</mockito.version>
		<logback.version>1.2.3</logback.version>
		<jdepend.version>2.9.1</jdepend.version>
		<hibernate-validator.version>4.2.0.Final</hibernate-validator.version>
		<sejda.version>4.0.8</sejda.version>
		<sejda.commons.version>1.1.4</sejda.commons.version>
		<eventstudio.version>2.0.0</eventstudio.version>
		<injector.version>2.0.0</injector.version>
		<fontawesomefx.fontawesome.version>4.7.0-9.1.2</fontawesomefx.fontawesome.version>
		<fontawesomefx.materialicons.version>2.2.0-9.1.2</fontawesomefx.materialicons.version>
		<fontawesomefx.materialdesignfont.version>2.0.26-9.1.2</fontawesomefx.materialdesignfont.version>
		<testfx.version>4.0.15-alpha</testfx.version>
		<jackson-jr.version>2.9.9</jackson-jr.version>
		<tempus.fugit.version>1.1</tempus.fugit.version>
		<bouncycastle.version>1.65</bouncycastle.version>
		<hamcrest.version>1.3</hamcrest.version>
		<javafx.version>14.0.1</javafx.version>
		<monocle.version>jdk-12.0.1+2</monocle.version>
		<maven.build.timestamp.format>dd-MMM-yyyy</maven.build.timestamp.format>
		<pdfsam.builddate>${maven.build.timestamp}</pdfsam.builddate>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate-validator.version}</version>
			</dependency>
			<dependency>
				<groupId>de.jensd</groupId>
				<artifactId>fontawesomefx-fontawesome</artifactId>
				<version>${fontawesomefx.fontawesome.version}</version>
			</dependency>
			<dependency>
				<groupId>de.jensd</groupId>
				<artifactId>fontawesomefx-materialdesignfont</artifactId>
				<version>${fontawesomefx.materialdesignfont.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pdfsam</groupId>
				<artifactId>eventstudio</artifactId>
				<version>${eventstudio.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-model</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-conversion</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-core</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-sambox</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pdfsam</groupId>
				<artifactId>pdfsam-injector</artifactId>
				<version>${injector.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.jr</groupId>
				<artifactId>jackson-jr-objects</artifactId>
				<version>${jackson-jr.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>jdepend</groupId>
				<artifactId>jdepend</artifactId>
				<version>${jdepend.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-core</artifactId>
				<version>${testfx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-junit</artifactId>
				<version>${testfx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${javafx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>openjfx-monocle</artifactId>
				<version>${monocle.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.sejda</groupId>
			<artifactId>sejda-commons</artifactId>
			<version>${sejda.commons.version}</version>
		</dependency>
		<!-- test depts -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.tempus-fugit</groupId>
			<artifactId>tempus-fugit</artifactId>
			<version>${tempus.fugit.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
